--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div class="header">
         <h1 id="h1">Let's Generate Random Passwords !</h1>
         <button id="gp" onclick= "generatepass()">Generate Password</button>
-        <input type="text" id="password" readonly>
+        <div class="header2">
+        <input type="text"id="password" readonly>
+        <button id="copytext" onclick="copyfunction()"><img id="copyimage"src="assets/icons8-copy-64.png"</button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
